# quickstart-resources

./: .gitignore  README.md  example_context.json  example_vuln.json  kube4sagent.py  pyproject.toml  raw_results.csv
llm/: __init__.py  base.py
mcp-client-python/: README.md  langgraph_mcp_example.py  pyproject.toml
opensource_rag/: README.md  build.py  rag.py
plain/: main.py
plain/plain_output/: llm_raw.txt  mitigations.json  verification.json
verify_agent/: __init__.py  agent.py  core.py  llm_verify.py
