[project]
name = "kube4sagent"
version = "0.1.0"
description = "LangGraph based Kubernetes vulnerability strategy generator"
authors = [{name=" AutoGen "}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "openai>=1.106.1",
  "gitpython>=3.1.43",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0.post1",
  "tqdm>=4.66.0",
  "rich>=13.7.0",
  "requests>=2.32.0"
  ,"numpy>=1.26.0"
  ,"langchain>=0.2.0"
  ,"langchain-community>=0.2.0"
  ,"langchain-openai>=0.1.0"
  ,"huggingface-hub>=0.22.0"
]

[project.optional-dependencies]
rag = [
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-openai>=0.1.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0.post1",
  "huggingface-hub>=0.22.0",
  "tqdm>=4.66.0",
  "rich>=13.7.0",
  "requests>=2.32.0"
]

[project.scripts]
kube4sagent = "kube4sagent:main"
opensource-rag = "opensource_rag.rag:main"

[tool.uv]
# uv specific settings placeholder
