[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.1.1",
    "python-dotenv>=1.0.1",
    # LangGraph & LangChain 相关依赖，用于示例集成
    "langgraph>=0.2.20",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
]
